--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  video_player: ^2.2.16
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - asset/image/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
